miniextendr-macros/tests/ui/derive_dataframe_unknown_attr.stderr
error: unknown dataframe attribute; expected `name`, `align`, `tag`, or `parallel`
 --> tests/ui/derive_dataframe_unknown_attr.rs:6:13
  |
6 | #[dataframe(bogus)]
  |             ^^^^^
